--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,4 +2,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-top: 14px;
+    outline: auto;
+    padding: 0 10px;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 90px;
 }
