--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -8,11 +8,12 @@
 
 .inputText {
    width: 240px;
-  margin-bottom: 14px;
 }
 
-.inputNum {
-  margin-bottom: 12px;
+
+
+.labelNum {
+  margin-top: 14px;
 }
 
 .btnAddContact {
@@ -21,5 +22,6 @@
   margin: 0 auto;
   width: 88px;
   height: 24px;
-  margin-bottom: 26px;
+  margin-bottom: 10px;
+  margin-top: 18px;
 }
